# omnisync

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  logging.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_dlq_retry_and_schema_version.py
docs/: data-lineage.md
monitoring/: alerts.yml  grafana-dashboard.json  prometheus.yml
monitoring/grafana-provisioning/dashboards/: dashboards.yml  omnisync.json
requirements/: base.txt  dev.txt
src/: celery_app.py  config.py  database.py  db_types.py  exceptions.py  logging_config.py  main.py  metrics.py  models.py  otel.py  pagination.py
src/agent/: router.py  schemas.py
src/auth/: __init__.py  config.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/dlq/: models.py  router.py  schemas.py  service.py  tasks.py
src/events/: __init__.py  audit_models.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/filestore/: config.py  service.py  tasks.py
src/github/: __init__.py  config.py  constants.py  exceptions.py  router.py  schemas.py  service.py  tasks.py  utils.py
src/imap/: config.py  router.py  schemas.py  service.py  smtp.py  tasks.py
src/integrations/: __init__.py  base.py  registry.py  sync.py
src/jira/: config.py  service.py  tasks.py
src/outbox/: models.py  service.py  tasks.py
src/raw_payloads/: __init__.py  models.py  router.py  schemas.py  service.py  storage.py  tasks.py
src/search/: embeddings.py  router.py  vector.py
src/sync_logs/: __init__.py  models.py  schemas.py  service.py
src/sync_state/: models.py  service.py
src/telegram/: __init__.py  config.py  constants.py  exceptions.py  router.py  schemas.py  service.py  tasks.py  utils.py
src/webhooks/: models.py
tests/: conftest.py  test_celery_wiring.py  test_connectors.py  test_e2e.py  test_e2e_connectors.py  test_events.py  test_github.py  test_migrations.py  test_new_modules.py  test_parsers.py  test_postgres_integration.py  test_resilience.py  test_search_vector.py  test_tasks.py  test_telegram.py
